--- a/Equipos/package.json
+++ b/Equipos/package.json
@@ -66,5 +66,8 @@
     "@loopback/eslint-config": "^11.0.2",
     "eslint": "^7.32.0",
     "typescript": "~4.4.4"
+  },
+  "engines": {
+    "node": "14.16.1"
   }
 }
