--- a/Equipos/package.json
+++ b/Equipos/package.json
@@ -32,7 +32,7 @@
     "preopenapi-spec": "npm run build",
     "openapi-spec": "node ./dist/openapi-spec",
     "prestart": "npm run rebuild",
-    "start": "node -r source-map-support/register .",
+    "start": "node .",
     "clean": "lb-clean dist *.tsbuildinfo .eslintcache",
     "rebuild": "npm run clean && npm run build"
   },
@@ -66,8 +66,5 @@
     "@loopback/eslint-config": "^11.0.2",
     "eslint": "^7.32.0",
     "typescript": "~4.4.4"
-  },
-  "engines": {
-    "node": "14.16.1"
   }
 }
